--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,12 @@
     "express-validator": "^7.2.1",
     "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.0",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "redis": "^5.0.1"
+    "redis": "^5.0.1",
+    "stripe": "^18.1.1",
+    "uuid": "^11.1.0"
   }
 }
