--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
+    "fs": "^0.0.1-security",
     "jsdom": "^26.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
@@ -25,6 +26,7 @@
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdfmake": "^0.2.20",
     "redis": "^5.0.1",
     "stripe": "^18.1.1",
     "uuid": "^11.1.0"
