--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI & Deploy
+name: Docker Image CI
 
 on:
   push:
@@ -7,19 +7,15 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build Docker image (CI check)
-        run: docker build . --file Dockerfile --tag my-backend:ci
-
-      - name: Trigger Render Deploy Hook
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+      - name: Build Docker image
+        run: docker build -t my-backend:ci -f Dockerfile .
