--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
@@ -14,6 +15,7 @@
     "axios": "^1.9.0",
     "lucide-react": "^0.511.0",
     "next": "15.2.3",
+    "next-auth": "^4.24.11",
     "postcss": "8.4.29",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -26,11 +28,18 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "20.6.2",
     "@types/react": "19.0.12",
     "@types/react-dom": "19.0.4",
     "eslint": "8.49.0",
     "eslint-config-next": "15.2.3",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3",
+    "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.2",
     "typescript": "5.2.2"
   }
 }
